kustomize/app-policy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-generator-blog
  namespace: policy-generator-blog-app
  labels:
    app: policy-generator-blog
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: policy-generator-blog
