kustomize/app-policy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: policy-generator-blog
  namespace: policy-generator-blog-app
  labels:
    app: policy-generator-blog
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: policy-generator-blog
